--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body style="display: flex; align-items: center; justify-content: center; height: 100vh;">
-    <img src="devivere.jpg" alt="Coat of Arms of Family Devivere" style="height: auto; width: auto;">
+    <img src="coat_of_arms.jpeg" alt="Coat of Arms of Family Devivere" style="height: auto; width: auto;">
 </body>
 
 </html>
