Fixed image sizing

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Devivere</title>
 </head>
 
-<body style="display: flex; align-items: center; justify-content: center; height: 100vh;">
-    <img src="coat_of_arms.jpeg" alt="Coat of Arms of Family Devivere" style="height: auto; width: auto;">
+<body style="display: flex; align-items: center; justify-content: center; height: 100vh; ">
+    <img src="coat_of_arms.jpeg" alt="Coat of Arms of Family Devivere" style="width: 500px; max-width: 90vw;">
 </body>
 
 </html>
